--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "burgerrrr devour",
   "main": "server.js",
   "scripts": {
-    "test": "d"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
